# adventOfCode2024

./: AOC2024.cabal
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.6.6/: AOC2024-0.1.0.0-inplace.conf  package.cache
exe/: Main.hs
lib/: DayOne.hs  RQS.hs
