cabal-version:      3.0
name:               AOC2024
version:            0.1.0.0
-- synopsis:
-- description:
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             Johannes Rosendal
maintainer:         rosendal.johannes@gmail.com
-- copyright:
category:           Text
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  
        DayOne,
        RQS
    -- other-modules:
    -- other-extensions:
    build-depends:    
        base ^>=4.18.2.1,
        random ^>=1.2.1.2
    hs-source-dirs:   lib
    default-language: Haskell2010

executable AOC2024
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.18.2.1,
        AOC2024

    hs-source-dirs:   exe
    default-language: Haskell2010

test-suite AOC2024-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          runtests.hs
    build-depends:
        base ^>=4.18.2.1,
        AOC2024
